--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ spring.datasource.username= root
 spring.datasource.password= root
 
 
-file.upload.dir=C:\\Users\\Windows 10\\Desktop\\Project\\author-book-spring\\upload
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.use-new-id-generator-mappings=false
+file.upload.dir=C:\\Users\\Windows 10\\Desktop\\Project\\author-book-spring\\upload
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
