add change passwod functionality

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ file.upload.dir=C:\\Users\\Windows 10\\Desktop\\Project\\author-book-spring\\upl
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=smbat92sh@gmail.com
-spring.mail.password=smb098565252
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
